--- a/requirements.txt
+++ b/requirements.txt
@@ -44,24 +44,17 @@ olefile==0.44
 opencv-python==3.3.0.10
 pandas==0.20.3
 pandocfilters==1.4.2
+pymongo==3.6.0
 parso==0.1.0
 pyzmq==16.0.2
 qtconsole==4.3.1
 requests==2.18.4
-scikit-image==0.13.1
-scikit-learn==0.19.0
-scipy==0.19.1
-simplegeneric==0.8.1
 six==1.11.0
 smart-open==1.5.3
-tensorflow==1.3.0
-tensorflow-tensorboard==0.1.7
 terminado==0.6
 testpath==0.3.1
 tornado==4.5.2
 traitlets==4.3.2
 tzlocal==1.5.1
 urllib3==1.22
-wcwidth==0.1.7
-Werkzeug==0.12.2
-widgetsnbextension==3.0.3
+
